--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,7 @@ section {
 }
 
 .hero-img {
-  border: 1px solid #fff;
+  box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
   width: 100%;
   border-radius: 12px;
 }
